googlechat/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautrix-googlechat-bridge
  labels:
    helm.sh/chart: mautrix-googlechat-1.0.1
    app.kubernetes.io/name: mautrix-googlechat
    app.kubernetes.io/instance: matrix-googlechat
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    rollingUpdates: null
    type: Recreate

    rollingUpdate: null
  selector:
    matchLabels:
      app.kubernetes.io/name: mautrix-googlechat
      app.kubernetes.io/instance: matrix-googlechat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mautrix-googlechat
        app.kubernetes.io/instance: matrix-googlechat
      annotations:
        checksum/secret: "17e363ea21e5567318f636215ce39773f1f548ee5f41a19eff3bdbc39df2c080"
    spec:
      serviceAccountName: mautrix-googlechat-bridge
      securityContext:
        fsGroup: 1000
      containers:
        - name: mautrix-googlechat
          securityContext:
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          image: "dock.mau.dev/mautrix/googlechat:latest"
          imagePullPolicy: Always
          command:
            - python3
            - -m
            - mautrix_googlechat
            - -c
            - /config/config.yaml
          ports:
            - name: http
              containerPort: 29318
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            failureThreshold: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /_matrix/mau/live
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            periodSeconds: 10
          resources:
            {}
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
            - name: logs
              mountPath: /logs
      volumes:
        - name: config
          secret:
            secretName: mautrix-googlechat-bridge
        - name: data
          emptyDir: {}
        - name: logs
          emptyDir: {}
