googlechat/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-googlechat-bridge
  labels:
    app.kubernetes.io/name: mautrix-googlechat
    app.kubernetes.io/instance: matrix-googlechat
spec:
  type: ClusterIP
  externalTrafficPolicy: 
  ports:
    - port: 29318
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mautrix-googlechat
    app.kubernetes.io/instance: matrix-googlechat
